# example-fosdem-2015

./: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.h  box.cpp  box.h  boxmanager.cpp  boxmanager.h  boxmodel.cpp  boxmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
src/qml/: CMakeLists.txt  Scene.qml
